pytorch-nn-iris

--- a/PyTorch e Iris.ipynb
+++ b/PyTorch e Iris.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usando o dataset da Iris Flowers do Scikit Learn (que está no formato numpy), nós construímos um classificador linear em PyTorch.nn para prever que espécie de flor é. Começamos carregando o dataset e visualizando as propriedades do mesmo."
+    "Usando o dataset da Iris Flowers do Scikit Learn (que está no formato numpy), nós construímos uma rede neural com PyTorch para prever a espécie da flor. Começamos carregando o dataset e visualizando as propriedades do mesmo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,26 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'numpy.ndarray'>\n",
       "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
    "source": [
-    "print(type(features))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "O dataset da iris é organizado pelas labels. Então, precisamos embaralhar o dataset para que nosso modelo possa aprender ou ajustar os dados adequadamente. Antes de embaralharmos os dados, nós precisa fazer algum pré-processamento de dados."
+    "print(type(features))\n",
+    "print(type(pre_labels))"
    ]
   },
   {
@@ -241,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,52 +271,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nós importamos uma função do sci-kit learn para dividir o dataset em treinamento e teste."
+    "Nós importamos uma função do sci-kit learn para dividir o dataset em treinamento e teste em 70% - 30%."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "feature_train, feature_test, labels_train, labels_test = train_test_split(features, labels, shuffle=True)"
+    "feature_train, feature_test, labels_train, labels_test = train_test_split(features, labels, test_size=0.30, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "112\n",
-      "38\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(feature_train))\n",
-    "print(len(feature_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# feature_train, feature_test, labels_train, labels_test\n",
-    "# Dividindo os dados em 70% - 30% no conjunto de treinamento e no conjunto de teste\n",
-    "x_train, x_test, y_train, y_test = train_test_split(features, labels, test_size=0.30, random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -334,16 +299,9 @@
     }
    ],
    "source": [
-    "print(len(x_train))\n",
-    "print(len(x_test))"
+    "print(len(feature_train))\n",
+    "print(len(feature_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -354,14 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.utils.data as utils\n",
-    "import torch.utils.data as td\n",
     "from torch.autograd import Variable "
    ]
   },
@@ -376,36 +331,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O PyTorch utiliza data loaders para carregar dados de treinamento e validação em lotes. Já carregamos os dados nos arrays do NumPy, mas precisamos agrupá-los nos conjuntos de dados PyTorch (nos quais os dados são convertidos em Tensors do PyTorch) e criar loaders para ler lotes desses conjuntos de dados."
+    "Já carregamos os dados nos arrays do NumPy, mas precisamos agrupá-los nos conjuntos de dados PyTorch (nos quais os dados são convertidos em Tensors do PyTorch)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#feature_train = torch.Tensor(x_train).float()\n",
-    "#labels_train = torch.Tensor(y_train).long()\n",
-    "#train_ds = utils.TensorDataset(feature_train, labels_train)\n",
-    "#train_loader = td.DataLoader(train_ds, batch_size=10, shuffle=False, num_workers=1)"
+    "feature_train_t = Variable(torch.FloatTensor(feature_train))\n",
+    "labels_train_t = Variable(torch.FloatTensor(labels_train))\n",
+    "feature_test_t = Variable(torch.FloatTensor(feature_test))\n",
+    "labels_test_t = Variable(torch.FloatTensor(labels_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_train_v = Variable(torch.FloatTensor(feature_train), requires_grad = False)\n",
-    "labels_train_v = Variable(torch.FloatTensor(labels_train), requires_grad = False)\n",
-    "feature_test_v = Variable(torch.FloatTensor(feature_test), requires_grad = False)\n",
-    "labels_test_v = Variable(torch.FloatTensor(labels_test), requires_grad = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -427,42 +370,35 @@
     }
    ],
    "source": [
-    "print (feature_train[::10])"
+    "print (feature_train_t[::10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0, 1, 0],\n",
-      "        [0, 0, 1],\n",
-      "        [0, 1, 0],\n",
-      "        [1, 0, 0],\n",
-      "        [0, 0, 1],\n",
-      "        [0, 0, 1],\n",
-      "        [1, 0, 0],\n",
-      "        [0, 1, 0],\n",
-      "        [1, 0, 0],\n",
-      "        [0, 1, 0],\n",
-      "        [1, 0, 0]])\n"
+      "tensor([[0., 1., 0.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 1., 0.],\n",
+      "        [1., 0., 0.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [1., 0., 0.],\n",
+      "        [0., 1., 0.],\n",
+      "        [1., 0., 0.],\n",
+      "        [0., 1., 0.],\n",
+      "        [1., 0., 0.]])\n"
      ]
     }
    ],
    "source": [
-    "print (labels_train[::10])"
+    "print (labels_train_t[::10])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -475,18 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Criaremos uma rede que consiste em 3 camadas totalmente conectadas."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A camada de entrada recebe 4 valores de entrada (as features da íris) e aplica uma função de ativação ReLU.\n",
-    "# A camada oculta recebe dez entradas e aplica uma função de ativação ReLU.\n",
-    "# A camada de saída usa uma função de ativação do SoftMax para gerar 3 saídas (que representam as probabilidades para as três espécies de íris)"
+    "A camada de entrada recebe 4 valores de entrada (as features da íris: 1. sepal length in cm; 2. sepal width in cm; 3. petal length in cm; 4. petal width in cm ) que manda pra 10 nós da camada oculta e que por sua vez manda pra 3 nós da camada de saída."
    ]
   },
   {
@@ -498,45 +423,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IrisNet(\n",
-      "  (fc1): Linear(in_features=4, out_features=10, bias=True)\n",
-      "  (fc2): Linear(in_features=10, out_features=10, bias=True)\n",
-      "  (fc3): Linear(in_features=10, out_features=3, bias=True)\n",
+      "Network(\n",
+      "  (hidden): Linear(in_features=4, out_features=10, bias=True)\n",
+      "  (output): Linear(in_features=10, out_features=3, bias=True)\n",
+      "  (sigmoid): Sigmoid()\n",
       ")\n"
      ]
     }
    ],
    "source": [
-    "# Numeros dos nós da camada oculta\n",
-    "hl = 10\n",
-    "\n",
-    "# Criando a rede neural\n",
-    "class IrisNet(nn.Module):\n",
+    "class Network(torch.nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(IrisNet, self).__init__()\n",
-    "        self.fc1 = nn.Linear(4, hl)\n",
-    "        self.fc2 = nn.Linear(hl, hl)\n",
-    "        self.fc3 = nn.Linear(hl, 3)\n",
+    "        super().__init__()\n",
+    "        self.hidden = torch.nn.Linear(4, 10)\n",
+    "        self.output = torch.nn.Linear(10, 3)\n",
+    "        self.sigmoid = torch.nn.Sigmoid()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = torch.relu(self.fc1(x))\n",
-    "        x = torch.relu(self.fc2(x))\n",
-    "        x = torch.softmax(self.fc3(x),dim=1)\n",
+    "        x = self.hidden(x)\n",
+    "        x = self.output(x)\n",
+    "        x = self.sigmoid(x)\n",
     "        return x\n",
     "\n",
-    "# Criando uma instancia do modelo da rede neural\n",
-    "model = IrisNet()\n",
-    "print(model)\n",
-    "loss_fn = nn.BCELoss() #calculates the loss\n",
-    "optim = torch.optim.SGD(model.parameters(), lr = 0.01)"
+    "model = Network() \n",
+    "loss_fn = torch.nn.BCELoss() \n",
+    "optim = torch.optim.SGD(model.parameters(), lr = 0.01)\n",
+    "print(model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -558,7 +471,7 @@
    "source": [
     "Para treinar o modelo, precisamos alimentar repetidamente os valores de treinamento pela rede, usar uma função de perda para calcular a perda, usar um otimizador para retropropagar os ajustes de peso e valor de polarização e validar o modelo usando os dados de teste que retivemos.\n",
     "\n",
-    "Para fazer isso, criaremos uma função para treinar e otimizar o modelo e a função para testar o modelo. Em seguida, chamaremos essas funções iterativamente por mais de 100 épocas, registrando as estatísticas de perda e precisão de cada época."
+    "Vamos treinar e otimizar o modelo para isso vamos iterar 5000 vezes, registrando as estatísticas de perda e precisão em cada vez."
    ]
   },
   {
@@ -569,8 +482,8 @@
    "source": [
     "all_losses = []\n",
     "for num in range(5000):\n",
-    "    pred = model(feature_train_v) #predict\n",
-    "    loss = loss_fn(pred, labels_train_v) #calculate loss\n",
+    "    pred = model(feature_train_t) # predict\n",
+    "    loss = loss_fn(pred, labels_train_t) #calculate loss\n",
     "    all_losses.append(loss.data)\n",
     "    optim.zero_grad() #zero gradients to not accumulate\n",
     "    loss.backward() #update weights based on loss\n",
@@ -585,11 +498,124 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testar o Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nova amostra: [5.1, 3.5, 1.4, 0.2]\n",
+      "Prediction: setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_new = [[5.1,3.5,1.4,0.2]]\n",
+    "print ('Nova amostra: {}'.format(x_new[0]))\n",
+    "\n",
+    "# Iris-Setosa\n",
+    "x = torch.Tensor(x_new).float()\n",
+    "_, predicted = torch.max(model(x).data, 1)\n",
+    "print('Prediction:',iris_data.target_names[predicted.item()])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nova amostra: [6.4, 2.9, 4.3, 1.3]\n",
+      "Prediction: versicolor\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_new = [[6.4,2.9,4.3,1.3]]\n",
+    "print ('Nova amostra: {}'.format(x_new[0]))\n",
+    "\n",
+    "# Iris-versicolor\n",
+    "x = torch.Tensor(x_new).float()\n",
+    "_, predicted = torch.max(model(x).data, 1)\n",
+    "print('Prediction:',iris_data.target_names[predicted.item()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nova amostra: [5.8, 2.7, 5.1, 1.9]\n",
+      "Prediction: virginica\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_new = [[5.8,2.7,5.1,1.9]]\n",
+    "print ('Nova amostra: {}'.format(x_new[0]))\n",
+    "\n",
+    "# Iris-virginica\n",
+    "x = torch.Tensor(x_new).float()\n",
+    "_, predicted = torch.max(model(x).data, 1)\n",
+    "print('Prediction:',iris_data.target_names[predicted.item()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Acurácia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "predicted_values = []\n",
+    "\n",
+    "for num in range(len(feature_test_t)):\n",
+    "    predicted_values.append(model(feature_test_t[num]))"
+   ]
   },
   {
    "cell_type": "code",
@@ -600,23 +626,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New sample: [5.1, 3.5, 1.4, 0.2]\n",
-      "Prediction: setosa\n"
+      "Accuracy: 91.11111111111111\n"
      ]
     }
    ],
    "source": [
-    "#x_new = [[6.6,3.2,5.8,2.4]]\n",
-    "x_new = [[5.1,3.5,1.4,0.2]]\n",
-    "print ('New sample: {}'.format(x_new[0]))\n",
+    "score = 0\n",
+    "for num in range(len(predicted_values)):\n",
+    "    if np.argmax(labels_test[num]) == np.argmax(predicted_values[num].data.numpy()):\n",
+    "        score = score + 1\n",
     "\n",
-    "model.eval()\n",
-    "\n",
-    "# Get a prediction for the new data sample\n",
-    "x = torch.Tensor(x_new).float()\n",
-    "_, predicted = torch.max(model(x).data, 1)\n",
-    "\n",
-    "print('Prediction:',iris_data.target_names[predicted.item()])"
+    "accuracy = float(score / len(predicted_values)) * 100\n",
+    "print ('Accuracy: ' + str(accuracy))"
    ]
   },
   {
